GNOME Bugzilla – Bug 726125
Cannot click through CSD window shadows
Last modified: 2014-03-12 04:18:24 UTC
For windows that use client-side decorations, there is a 20px wide border containing the window shadow. The inner 10px area allows resizing the window. However, the *outer* 10px area also receives clicks even though it shouldn't. [...] (grawity) so what I'm seeing here with CSD windows (with latest -git builds of gtk3/mutter/gnome-shell/nautilus/gedit), is a 10px border that resizes the window, and another 10px border [20px total] that doesn't resize but still receives clicks (halfline) for focused window, unfocused window or both? (grawity) both (halfline) grawity: are you using Adwaita? (grawity) yes (halfline) weird (halfline) mclasen just showed me it on his machine too (mclasen) it looks like it is just broken (mclasen) gravity: can you file a bug ? (grawity) sure (mclasen) I think we just need to input-shape away the part of the shadow that extends outside the resize border [...] gnome-shell 3.11.91-22-gfc4bc52 mutter 3.11.91 gtk3 3.11.8-51-ga86ca5c gnome-themes-standard 3.11.90-13-gf622129 nautilus 3.11.90-7-ge95d4ba gedit 3.11.91-23-g7931529